crates/sith_python_parser/tests/snapshots/invalid_syntax@match_stmt_single_starred_subject.py.snap
---
source: crates/sith_python_parser/tests/fixtures.rs
input_file: crates/sith_python_parser/resources/inline/err/match_stmt_single_starred_subject.py
---
## AST

```
Module(
    ModModule {
        range: 0..28,
        body: [
            Match(
                MatchStmt {
                    range: 0..27,
                    subject: Starred(
                        StarredExpr {
                            range: 6..10,
                            value: Name(
                                NameExpr {
                                    range: 7..10,
                                    id: Name("foo"),
                                    ctx: Load,
                                },
                            ),
                            ctx: Load,
                        },
                    ),
                    cases: [
                        MatchCase {
                            range: 16..27,
                            pattern: MatchAs(
                                PatternMatchAs {
                                    range: 21..22,
                                    pattern: None,
                                    name: None,
                                },
                            ),
                            guard: None,
                            body: [
                                Expr(
                                    ExprStmt {
                                        range: 24..27,
                                        value: EllipsisLiteral(
                                            EllipsisLiteralExpr {
                                                range: 24..27,
                                            },
                                        ),
                                    },
                                ),
                            ],
                        },
                    ],
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | match *foo:
  |       ^^^^ Syntax Error: Starred expression cannot be used here
2 |     case _: ...
  |
